{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "a39f41f4-d234-4b27-9954-007d0cd57387",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "8b55aa24-6c62-4ca9-9b8a-be21dab825ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "97e4c6a7-b1b6-4f66-a26c-608c76e0db20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "1ee88e25-3d48-4f4b-ae70-42e4236de97b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "1d3c29f4-1c68-4290-8dab-62163c0a8793",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "PassThrough",
                    "id": "a10231ca-c670-45f4-bf3c-4482499105b1",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "45041e4f-96be-4fe6-b9b3-2f2bde7ee32f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "InteractHold",
                    "type": "PassThrough",
                    "id": "cd199d79-9225-4077-a009-3df4e989ad71",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "813bdd66-c90f-48df-8673-c1481b69b2a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4c1b6530-587a-41b3-9b26-f8d823ce3fe4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1d7266b3-9bbb-49c4-8dea-5784bb163f89",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0ff10104-a426-432e-96a0-3bd6f228ed72",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "84cf592d-4a9e-4bdc-a7bf-816717134e8e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5bccf99b-cad4-4d2f-8240-b7111f25d3bc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c7eacff8-db0d-4664-b043-b3f49ed43c3c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08c1bade-092d-4bda-90a4-7bef6c102818",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f9968a3-6bf3-417a-92ac-d63effe15b39",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96f8b61f-93e5-40b6-b7bf-56e1db4c9f60",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cec3c723-4700-4f4d-bb90-c31dbfb4db36",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df201415-c680-430e-8bfa-eb1c2a37c3d3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3d87773-2446-45df-aae9-d43dc55a61f9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}